fix(rating): align with design files

--- a/src/components/_dropdown.scss
+++ b/src/components/_dropdown.scss
@@ -27,9 +27,9 @@
 // Styleguide Components.dropdown
 
 .#{$ns}dropdown {
+  @include base-font();
+
   position: relative;
-  font-family: $sb-base-font-family;
-  font-size: sb-px2rems(13px);
   color: $sb-color-dark-3;
 
   &__button {
