--- a/src/settings/_fonts.scss
+++ b/src/settings/_fonts.scss
@@ -27,3 +27,8 @@ $sb-font-stack: (
 $sb-base-font-family: BlinkMacSystemFont, -apple-system, Segoe UI, Roboto,
   Helvetica, Arial, sans-serif;
 $sb-primary-font-family: Milo, $sb-base-font-family;
+
+@mixin base-font() {
+  font-family: $sb-base-font-family;
+  font-size: sb-px2rems(13px);
+}
