--- a/src/trumps/_text.scss
+++ b/src/trumps/_text.scss
@@ -61,8 +61,8 @@
 }
 
 .#{$ns}text--s {
-  font-family: $sb-base-font-family;
-  font-size: sb-px2rems(13px);
+  @include base-font();
+
   line-height: sb-px2rems(19px);
 }
 
